# PyAE

./: .gitignore  CLAUDE.md  LICENSE  README.md  build.bat  build_docs.bat  run_tests.bat  setup.bat
PyAE/: CMakeLists.txt  CMakePresets.json
PyAE/ae-stubs/: README.md  __init__.pyi  ae_serialize.pyi  async_render.pyi  batch.pyi  cache.pyi  color_profile.pyi  color_settings.pyi  comp.pyi  const.pyi  effect.pyi  footage.pyi  item.pyi  layer.pyi  layer_render_options.pyi  marker.pyi  mask.pyi  menu.pyi  perf.pyi  persistent_data.pyi  project.pyi  property.pyi  render.pyi  render_monitor.pyi  render_queue.pyi  sdk.pyi  sdk_footage.pyi  sound_data.pyi  three_d.pyi  types.pyi  world.pyi
PyAE/cmake/: AdobeAESDK.cmake  FindPython310.cmake  PiPLCompiler.cmake
PyAE/include/: AETypeUtils.h  ErrorHandling.h  IdleHandler.h  Logger.h  MemoryDiagnostics.h  MenuHandler.h  PanelHandler.h  PanelUI_Win.h  PathManager.h  PluginState.h  PyColorProfile.h  PyCompClasses.h  PyFootageClasses.h  PyKeyframeClasses.h  PyLayerClasses.h  PyLayerRenderOptionsClasses.h  PyMarker.h  PyMask.h  PyMaskHelpers.h  PyMenuClasses.h  PyProperty.h  PyPropertyCore.h  PyPropertyTypes.h  PyRefTypes.h  PyRenderClasses.h  PySideLoader.h  PySidePanelHandler.h  PySidePanelUI_Win.h  PySoundDataClasses.h  PyStreamUtils.h  PyWorldClasses.h  PythonHost.h  REPLServer.h  SDKVersionCompat.h  ScopedHandles.h  ScriptRunner.h  StringUtils.h  SuiteManager.h  TaskQueue.h  WinSync.h
PyAE/include/PySide/: IPySidePlugin.h  PanelUI_PySide.h  QtIntegration.h
PyAE/include/SDK/: SDKBindings.h
PyAE/resources/: PyAE.r  PyAE.rc
PyAE/scripts/: add_test_marker.py  ae_serialize.py  analyze_shape_layer.py  auto_test_memory.py  build_plugin.py  check_ae_api.py  check_comments.py  check_effect_names.py  check_markers.py  check_memory_leak_all_tests.py  check_stubs.py  debug_extendscript.py  debug_property_access.py  debug_test.py  debug_test_effect.py  debug_threeDPerChar.py  deploy_plugin.py  diagnose_comment_location.py  display_comments.py  explore_selector.py  explore_text_animator.py  explore_text_scale.py  explore_text_scale_v2.py  export_scene.py  import_scene.py  list_layer_properties.py  minimal_test.py  panels_config.py  process_utils.py  quick_deploy.py  quick_memory_check.py  repl_client.py  run_auto_test.ps1  run_test_animation_roundtrip.py  run_test_folder.py  run_test_footage.py  run_test_interpolation.py  run_test_keyframe.py  run_test_parenting.py  run_test_simple.py  (+15 more)
PyAE/scripts/panels/: comp_browser.py  hello_pyside.py  hello_pyside_embedded.py  hello_pyside_simple.py  layer_tools.py  sample_tool.py
PyAE/scripts/sample_scripts/: README.md  animate_layer.py  create_comp.py  hello_world.py
PyAE/scripts/test_scripts/: README.md  phase2_test.py  phase5_test.py  quick_test.py  test_footage_control.py  test_property_fix.py
PyAE/scripts/tests/: __init__.py
PyAE/src/: CMakeLists.txt  Core.cpp  ErrorHandling.cpp  IdleHandler.cpp  Loader.cpp  Logger.cpp  Main.cpp.backup  MenuHandler.cpp  PanelHandler.cpp  PanelUI_Win.cpp  PathManager.cpp  PluginState.cpp  PyAEBridgeExports.cpp  PySideLoader.cpp  PySidePanelHandler.cpp  PySidePanelUI_Win.cpp  PythonHost.cpp  REPLServer.cpp  ScriptRunner.cpp  SuiteManager.cpp  TaskQueue.cpp  pch.h
PyAE/src/Bridge/: PyAEBridge.cpp
PyAE/src/PyBindings/: AEModule.cpp  MemoryDiagnostics.cpp  Py3DLayer.cpp  PyAsyncRender.cpp  PyBatch.cpp  PyColorProfile.cpp  PyComp.cpp  PyComp_Core.cpp  PyEffect.cpp  PyFootage.cpp  PyItem.cpp  PyKeyframe.cpp  PyLayer.cpp  PyLayerRenderOptions.cpp  PyLayer_Core.cpp  PyLayer_Effect.cpp  PyLayer_Flags.cpp  PyLayer_Marker.cpp  PyLayer_Mask.cpp  PyLayer_Matte.cpp  PyLayer_Relations.cpp  PyLayer_Time.cpp  PyLayer_Transform.cpp  PyMarker.cpp  PyMask.cpp  PyMenu.cpp  PyPanelUI.cpp  PyPersistentData.cpp  PyProject.cpp  PyProperty.cpp  PyRender.cpp  PyRenderMonitor.cpp  PyRenderQueue.cpp  PySDK.cpp  PySoundData.cpp  PyWorld.cpp  ValidationUtils.h
PyAE/src/PySide/: CMakeLists.txt  PanelUI_PySide.cpp  PySidePlugin.cpp  PySidePlugin.h  QtIntegration.cpp
PyAE/tests/: __init__.py  run_memory_test.py  test_camera_light_suite.py  test_collection_suite.py  test_colorsettings_suite.py  test_data_suite.py  test_footage_suite.py  test_io_suite.py  test_memory_diagnostics.py  test_renderqueue_suite.py  test_runner.py  test_sdk.py  test_sdk_core.py  test_sound_data_suite.py  test_textdocument_suite.py  test_utils.py
PyAE/tests/SDK/: __init__.py  test_memory_suite.py
PyAE/tests/animation/: __init__.py  test_animation_roundtrip.py  test_easing.py  test_keyframe_interpolation.py  test_keyframe_operations.py  test_motion_path.py
PyAE/tests/batch/: __init__.py  test_batch_operations.py
PyAE/tests/core/: __init__.py  test_3d.py  test_command.py  test_comp.py  test_composite_suite.py  test_dynamic_property.py  test_effect.py  test_item.py  test_item_view_suite.py  test_iterate_suite.py  test_layer.py  test_layer_advanced.py  test_layer_advanced_summary.md  test_layer_quality_label.py  test_layer_render_options_suite.py  test_marker.py  test_mask.py  test_math_suite.py  test_project.py  test_property.py  test_property_advanced.py  test_render_async_manager_suite.py  test_render_options_suite.py  test_render_queue.py  test_render_queue_monitor_suite.py  test_render_suite.py  test_stream_suite.py  test_utility.py  test_world_suite.py
PyAE/tests/effects/: __init__.py  test_arbitrary_data.py  test_effect_mask_api.py  test_effect_param.py  test_mask_vertices.py
PyAE/tests/expressions/: __init__.py  test_expression.py  test_expression_links.py
PyAE/tests/folder/: __init__.py  test_folder_operations.py
PyAE/tests/footage/: __init__.py  test_footage_item.py
PyAE/tests/high_level/: __init__.py  test_async_render.py  test_menu.py  test_persistent_data.py  test_render_monitor.py
PyAE/tests/integration/: test_phase5.py
TestEffect/: CMakeLists.txt  TestEffect.cpp  TestEffect.h  TestEffectPiPL.r  TestEffect_Arb_Handler.cpp  TestEffect_Strings.cpp  TestEffect_Strings.h  compile_pipl.cmake
TestEffect/resources/: TestEffectPiPL.rc
TestRunner/: CMakeLists.txt  main.cpp
(+170 files in other folders)
